Se han agregado comentarios en inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -7,6 +7,7 @@
     <title>Inicio Sesión</title>
   </head>
   <body>
+    <!--Encabezado-->
     <header>
       <div class="header">
         <!--Logo-->
@@ -15,6 +16,7 @@
         </div>
       </div>
     </header>
+    <!--Contendio principal-->
     <main class="mainRegistro">
       <div class="contenedorFormulario">
         <div class="contenedorInput">
@@ -41,16 +43,19 @@
             ><img src="../imagenes/nuevoLogo.png" alt="Logo 'Online Store'"
           /></a>
         </div>
+        <!--Información-->
         <div class="contenedorInformacion">
           <p><b class="tituloPiePagina">Información</b></p>
           <a href="./index.html">¿Quienes somos?</a>
           <a href="./index.html">Nuestras sucursales</a>
           <a href="./index.html">Terminos y condiciones</a>
         </div>
+        <!--Ayuda-->
         <div class="contenedorAyuda">
           <p><b class="tituloPiePagina">Ayuda</b></p>
           <a href="./index.html">¿Cómo comprar?</a>
         </div>
+        <!--Redes sociales-->
         <div class="contenedorRedesSociales">
           <p><b class="tituloPiePagina">Redes Sociales</b></p>
           <a href="./index.html"><img src="../imagenes/logoIg.png" alt="icono Instagram"/></a>
