Se han agregado comentarios en producto.html

--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -14,21 +14,25 @@
     <title>Producto</title>
   </head>
   <body>
+    <!--Encabezado-->
     <header>
-      <!--Encabezado-->
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"></a>
+          <a href="../../index.html"
+            ><img
+              src="../imagenes/nuevoLogo.png"
+              alt="Logo tienda 'Online Store'"
+          /></a>
         </div>
         <!--Items usuario-->
         <div class="contenedorUsuario">
-          <img src="../imagenes/corazon.png" alt="Icono corazón">
+          <img src="../imagenes/corazon.png" alt="Icono corazón" />
           <a class="roboto">Favoritos</a>
-          <img src="../imagenes/perfil.png" alt="Icono perfil">
+          <img src="../imagenes/perfil.png" alt="Icono perfil" />
           <a href="../paginas/inicioSesion.html">Mi cuenta</a>
         </div>
-        <div class="contenedorBuscador"> 
+        <div class="contenedorBuscador">
           <!--Buscador-->
           <div class="contenedorBuscador">
             <input
@@ -40,7 +44,8 @@
           </div>
         </div>
       </div>
-    </header>    
+    </header>
+    <!--Contenido principal-->
     <main class="mainProducto">
       <div class="contenedorProducto">
         <div class="contenedorImagenesProducto">
@@ -91,12 +96,19 @@
               ><button id="agregarCarrito">Agregar al carrito</button></a
             >
           </div>
+          <!--Metodos de pago-->
           <div class="contenedorMetodosPagos">
             <p><b>Aprovecha nuestras promociones</b></p>
             <div class="contenedorPromociones">
-              <button><img src="../imagenes/mastercard.png" alt="Icono mastercard"/></button>
-              <button><img src="../imagenes/mastercard.png" alt="Icono mastercard"/></button>
-              <button><img src="../imagenes/mastercard.png" alt="Icono mastercard"/></button>
+              <button>
+                <img src="../imagenes/mastercard.png" alt="Icono mastercard" />
+              </button>
+              <button>
+                <img src="../imagenes/mastercard.png" alt="Icono mastercard" />
+              </button>
+              <button>
+                <img src="../imagenes/mastercard.png" alt="Icono mastercard" />
+              </button>
             </div>
           </div>
         </div>
@@ -107,19 +119,31 @@
       </div>
       <div class="contenedorProductosRelacionados">
         <div class="itemRelacionado">
-          <a href="./producto.html"><img src="../imagenes/adidasRoja.jpg" alt="Imagen Zapatatilla Adidas roja"></a>
+          <a href="./producto.html"
+            ><img
+              src="../imagenes/adidasRoja.jpg"
+              alt="Imagen Zapatatilla Adidas roja"
+          /></a>
           <p>ZAPATILLAS DEPORTIVAS ADIDAS ROJAS</p>
           <p><b>6 CUOTAS SIN INTERÉS DE $20.000,00</b></p>
           <p>120.000,00</p>
         </div>
         <div class="itemRelacionado">
-          <a href="./producto.html"><img src="../imagenes/zapatillaAdidasAzul.png" alt="Imagen Zapatatilla Adidas azul"></a>
-          <p>ZAPATILLAS DEPORTIVAS ADIDAS AZUL </p>
+          <a href="./producto.html"
+            ><img
+              src="../imagenes/zapatillaAdidasAzul.png"
+              alt="Imagen Zapatatilla Adidas azul"
+          /></a>
+          <p>ZAPATILLAS DEPORTIVAS ADIDAS AZUL</p>
           <p><b>6 CUOTAS SIN INTERÉS DE $25.000,00</b></p>
           <p>153.000,00</p>
         </div>
         <div class="itemRelacionado">
-          <a href="./producto.html"><img src="../imagenes/adidasZamba.png" alt="Imagen Zapatatilla Adidas samba"></a>
+          <a href="./producto.html"
+            ><img
+              src="../imagenes/adidasZamba.png"
+              alt="Imagen Zapatatilla Adidas samba"
+          /></a>
           <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
           <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
           <p>246.000,00</p>
@@ -133,19 +157,24 @@
           ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
         /></a>
       </div>
+      <!--Información-->
       <div class="contenedorInformacion">
         <p><b class="tituloPiePagina">Información</b></p>
         <a href="./index.html">¿Quienes somos?</a>
         <a href="./index.html">Nuestras sucursales</a>
         <a href="./index.html">Terminos y condiciones</a>
       </div>
+      <!--Ayuda-->
       <div class="contenedorAyuda">
         <p><b class="tituloPiePagina">Ayuda</b></p>
         <a href="./index.html">¿Cómo comprar?</a>
       </div>
+      <!--Redes sociales-->
       <div class="contenedorRedesSociales">
         <p><b class="tituloPiePagina">Redes Sociales</b></p>
-        <a href="./index.html"><img src="../imagenes/logoIg.png" alt="Icono instagram" /></a>
+        <a href="./index.html"
+          ><img src="../imagenes/logoIg.png" alt="Icono instagram"
+        /></a>
       </div>
     </footer>
   </body>
