Se ha agregado opengraph en index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Clothing Store</title>
+    <!--OpenGraph-->
+    <meta property="og:title" content="Online Store">
+    <meta property="og:site_name" content="Online Store">
+    <meta property="og:url" content="https://onlinestore-ch.netlify.app/">
+    <meta property="og:description" content="Tienda oficial de Online Store.
+    Aprovecha las mejores ofertas en tus líneas favoritas de zapatillas. ">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://onlinestore-ch.netlify.app/assets/imagenes/nuevoLogo.png">
   </head>
   <body>
   <header>
