Cambios en index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="Online Store">
     <meta property="og:url" content="https://onlinestore-ch.netlify.app/">
     <meta property="og:description" content="Tienda oficial de Online Store.
-    Aprovecha las mejores ofertas en tus líneas favoritas de zapatillas. ">
+    Aprovechá las mejores ofertas en tus líneas favoritas de zapatillas. ">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://onlinestore-ch.netlify.app/assets/imagenes/nuevoLogo.png">
   </head>
