--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Clothing Store</title>
+    <!--Meta description-->
+    <meta name="description" content="Descubre las mejores ofertas en zapatillas de tus marcas favoritas. Compra en nuestra tienda oficial y disfruta de envíos rápidos y seguros.">
     <!--OpenGraph-->
     <meta property="og:title" content="Online Store">
     <meta property="og:site_name" content="Online Store">
