Se ha agregado descripción en inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/style.css" />
     <title>Inicio Sesión</title>
+    <!--Descripción-->
+    <meta name="description" content="Inicia sesión en tu cuenta para acceder a tu perfil y realizar compras de manera rápida y segura.">
   </head>
   <body>
     <!--Encabezado-->
