Se ha agregado opengraph en inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -6,7 +6,26 @@
     <link rel="stylesheet" href="../../css/style.css" />
     <title>Inicio Sesión</title>
     <!--Descripción-->
-    <meta name="description" content="Inicia sesión en tu cuenta para acceder a tu perfil y realizar compras de manera rápida y segura.">
+    <meta
+      name="description"
+      content="Inicia sesión en tu cuenta para acceder a tu perfil y realizar compras de manera rápida y segura."
+    />
+    <!--Opengraph-->
+    <meta property="og:title" content="Inicia sesión" />
+    <meta property="og:site_name" content="Online Store" />
+    <meta
+      property="og:url"
+      content="https://onlinestore-ch.netlify.app/assets/paginas/iniciosesion"
+    />
+    <meta
+      property="og:description"
+      content="Inicia sesión en tu cuenta para acceder a tu perfil y realizar compras de manera rápida y segura."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://onlinestore-ch.netlify.app/assets/imagenes/nuevoLogo.png"
+    />
   </head>
   <body>
     <!--Encabezado-->
@@ -14,7 +33,11 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"/></a>
+          <a href="../../index.html"
+            ><img
+              src="../imagenes/nuevoLogo.png"
+              alt="Logo tienda 'Online Store'"
+          /></a>
         </div>
       </div>
     </header>
@@ -30,38 +53,43 @@
           <input type="password" />
         </div>
         <div class="contenedorBotonesRegistro">
-            <button class="botonVolver">Volver</button>
-            <button class="botonSucces">Ingresar</button>
+          <button class="botonVolver">Volver</button>
+          <button class="botonSucces">Ingresar</button>
         </div>
         <div>
-          <p>¿No tienes una cuenta? <a href="../paginas/registro.html">Crea una ahora</a></p>
+          <p>
+            ¿No tienes una cuenta?
+            <a href="../paginas/registro.html">Crea una ahora</a>
+          </p>
         </div>
       </div>
     </main>
     <!--Pie de pagina-->
     <footer class="pieDePagina">
-        <div class="contenedorLogoPiePagina">
-          <a href="../../index.html"
-            ><img src="../imagenes/nuevoLogo.png" alt="Logo 'Online Store'"
-          /></a>
-        </div>
-        <!--Información-->
-        <div class="contenedorInformacion">
-          <p><b class="tituloPiePagina">Información</b></p>
-          <a href="./index.html">¿Quienes somos?</a>
-          <a href="./index.html">Nuestras sucursales</a>
-          <a href="./index.html">Terminos y condiciones</a>
-        </div>
-        <!--Ayuda-->
-        <div class="contenedorAyuda">
-          <p><b class="tituloPiePagina">Ayuda</b></p>
-          <a href="./index.html">¿Cómo comprar?</a>
-        </div>
-        <!--Redes sociales-->
-        <div class="contenedorRedesSociales">
-          <p><b class="tituloPiePagina">Redes Sociales</b></p>
-          <a href="./index.html"><img src="../imagenes/logoIg.png" alt="icono Instagram"/></a>
-        </div>
-      </footer>
+      <div class="contenedorLogoPiePagina">
+        <a href="../../index.html"
+          ><img src="../imagenes/nuevoLogo.png" alt="Logo 'Online Store'"
+        /></a>
+      </div>
+      <!--Información-->
+      <div class="contenedorInformacion">
+        <p><b class="tituloPiePagina">Información</b></p>
+        <a href="./index.html">¿Quienes somos?</a>
+        <a href="./index.html">Nuestras sucursales</a>
+        <a href="./index.html">Terminos y condiciones</a>
+      </div>
+      <!--Ayuda-->
+      <div class="contenedorAyuda">
+        <p><b class="tituloPiePagina">Ayuda</b></p>
+        <a href="./index.html">¿Cómo comprar?</a>
+      </div>
+      <!--Redes sociales-->
+      <div class="contenedorRedesSociales">
+        <p><b class="tituloPiePagina">Redes Sociales</b></p>
+        <a href="./index.html"
+          ><img src="../imagenes/logoIg.png" alt="icono Instagram"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
