Se ha agregado opengraph y descripcion en registro.html

--- a/assets/paginas/registro.html
+++ b/assets/paginas/registro.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/style.css" />
+    <!--Descripción-->
+    <meta
+      name="description"
+      content="Creá tu cuenta y disfrutá de descuentos exclusivos, acceso rápido a tus pedidos y una experiencia personalizada en nuestra tienda."
+    />
     <title>Registro</title>
+    <!--Opengraph-->
+    <meta property="og:title" content="Registro" />
+    <meta property="og:site_name" content="Online Store" />
+    <meta
+      property="og:url"
+      content="https://onlinestore-ch.netlify.app/assets/paginas/registro"
+    />
+    <meta
+      property="og:description"
+      content="Crea tu cuenta y disfruta de descuentos exclusivos, acceso rápido a tus pedidos y una experiencia personalizada en nuestra tienda."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://onlinestore-ch.netlify.app/assets/imagenes/nuevoLogo.png"
+    />
   </head>
   <body>
     <!--Encabezado-->
@@ -12,7 +33,11 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"/></a>
+          <a href="../../index.html"
+            ><img
+              src="../imagenes/nuevoLogo.png"
+              alt="Logo tienda 'Online Store'"
+          /></a>
         </div>
       </div>
     </header>
@@ -28,38 +53,45 @@
           <input type="password" />
         </div>
         <div class="contenedorBotonesRegistro">
-            <button class="botonVolver">Volver</button>
-            <button class="botonSucces">Crear cuenta</button>
+          <button class="botonVolver">Volver</button>
+          <button class="botonSucces">Crear cuenta</button>
         </div>
         <div>
-          <p>¿Tienes una cuenta? <a href="../paginas/inicioSesion.html">Ingresar</a></p>
+          <p>
+            ¿Tienes una cuenta?
+            <a href="../paginas/inicioSesion.html">Ingresar</a>
+          </p>
         </div>
       </div>
     </main>
     <!--Pie de pagina-->
     <footer class="pieDePagina">
-        <div class="contenedorLogoPiePagina">
-          <a href="../../index.html"
-            ><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"
-          /></a>
-        </div>
-        <!--Información-->
-        <div class="contenedorInformacion">
-          <p><b class="tituloPiePagina">Información</b></p>
-          <a href="./index.html">¿Quienes somos?</a>
-          <a href="./index.html">Nuestras sucursales</a>
-          <a href="./index.html">Terminos y condiciones</a>
-        </div>
-        <!--Ayuda-->
-        <div class="contenedorAyuda">
-          <p><b class="tituloPiePagina">Ayuda</b></p>
-          <a href="./index.html">¿Cómo comprar?</a>
-        </div>
-        <!--Redes Sociales-->
-        <div class="contenedorRedesSociales">
-          <p><b class="tituloPiePagina">Redes Sociales</b></p>
-          <a href="./index.html"><img src="../imagenes/logoIg.png" alt="Icono instagram"/></a>
-        </div>
-      </footer>
+      <div class="contenedorLogoPiePagina">
+        <a href="../../index.html"
+          ><img
+            src="../imagenes/nuevoLogo.png"
+            alt="Logo tienda 'Online Store'"
+        /></a>
+      </div>
+      <!--Información-->
+      <div class="contenedorInformacion">
+        <p><b class="tituloPiePagina">Información</b></p>
+        <a href="./index.html">¿Quienes somos?</a>
+        <a href="./index.html">Nuestras sucursales</a>
+        <a href="./index.html">Terminos y condiciones</a>
+      </div>
+      <!--Ayuda-->
+      <div class="contenedorAyuda">
+        <p><b class="tituloPiePagina">Ayuda</b></p>
+        <a href="./index.html">¿Cómo comprar?</a>
+      </div>
+      <!--Redes Sociales-->
+      <div class="contenedorRedesSociales">
+        <p><b class="tituloPiePagina">Redes Sociales</b></p>
+        <a href="./index.html"
+          ><img src="../imagenes/logoIg.png" alt="Icono instagram"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
