--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -11,7 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <meta name="description" content="Las Adidas Samba, un clásico atemporal con estilo y comodidad. Perfectas para cualquier ocasión. ¡Descúbrelas ahora!">
     <title>Producto</title>
+    <!--Opengraph-->
+    <meta property="og:title" content="Producto" />
+    <meta property="og:site_name" content="Online Store" />
+    <meta
+      property="og:url"
+      content="https://onlinestore-ch.netlify.app/assets/paginas/producto"
+    />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://onlinestore-ch.netlify.app/" />
   </head>
   <body>
     <!--Encabezado-->
