--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -11,7 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <meta name="description" content="Las Adidas Samba, un clásico atemporal con estilo y comodidad. Perfectas para cualquier ocasión. ¡Descúbrelas ahora!">
+    <meta
+      name="description"
+      content="Las Adidas Samba, un clásico atemporal con estilo y comodidad. Perfectas para cualquier ocasión. ¡Descúbrelas ahora!"
+    />
     <title>Producto</title>
     <!--Opengraph-->
     <meta property="og:title" content="Producto" />
