Se ha agregado favicon en todas las paginas html

--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -15,6 +15,9 @@
       name="description"
       content="Las Adidas Samba, un clásico atemporal con estilo y comodidad. Perfectas para cualquier ocasión. ¡Descúbrelas ahora!"
     />
+    <!--Favicon-->
+    <link rel="icon" sizes="32x32" href="assets/imagenes/nuevoLogo.png">
+    <!--Title-->
     <title>Producto</title>
     <!--Opengraph-->
     <meta property="og:title" content="Producto" />
