--- a/assets/paginas/registro.html
+++ b/assets/paginas/registro.html
@@ -9,6 +9,9 @@
       name="description"
       content="Creá tu cuenta y disfrutá de descuentos exclusivos, acceso rápido a tus pedidos y una experiencia personalizada en nuestra tienda."
     />
+    <!--Favicon-->
+    <link rel="icon" sizes="32x32" href="../imagenes/nuevoLogo.png">
+    <!--titulo-->
     <title>Registro</title>
     <!--Opengraph-->
     <meta property="og:title" content="Registro" />
