--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/estilo.css" />
     <link rel="stylesheet" href="./../../css/style.css" />
+    <!--Favicon-->
+    <link rel="icon" sizes="32x32" href="../imagenes/nuevoLogo.png">
     <title>Carrito</title>
   </head>
   <body>
