--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/style.css" />
+    <!--Favicon-->
+    <link rel="icon" sizes="32x32" href="../imagenes/nuevoLogo.png">
+    <!--Titulo-->
     <title>Inicio Sesión</title>
     <!--Descripción-->
     <meta
