Se ha agregado Opengraph en Carrito.html

--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -6,8 +6,24 @@
     <link rel="stylesheet" href="../../css/estilo.css" />
     <link rel="stylesheet" href="./../../css/style.css" />
     <!--Favicon-->
-    <link rel="icon" sizes="32x32" href="../imagenes/nuevoLogo.png">
+    <link rel="icon" sizes="32x32" href="../imagenes/nuevoLogo.png" />
+    <!--Title-->
     <title>Carrito</title>
+    <!--Description-->
+    <meta
+      name="description"
+      content="Revisa y gestiona los productos en tu carrito de compras. Finaliza tu pedido de manera fácil y rápida."
+    />
+    <!--Opengraph-->
+    <meta property="og:title" content="Carrito" />
+    <meta property="og:site_name" content="Online Store" />
+    <meta
+      property="og:url"
+      content="http://127.0.0.1:5500/assets/paginas/carrito.html"
+    />
+    <meta property="og:description" content="Revisa y gestiona los productos en tu carrito de compras. Finaliza tu pedido de manera fácil y rápida." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://onlinestore-ch.netlify.app/" />
   </head>
   <body>
     <!--Encabezado-->
