--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -16,7 +16,7 @@
       content="Las Adidas Samba, un clásico atemporal con estilo y comodidad. Perfectas para cualquier ocasión. ¡Descúbrelas ahora!"
     />
     <!--Favicon-->
-    <link rel="icon" sizes="32x32" href="assets/imagenes/nuevoLogo.png">
+    <link rel="icon" sizes="32x32" href="assets/imagenes/nuevoLogo.png" />
     <!--Title-->
     <title>Producto</title>
     <!--Opengraph-->
@@ -26,7 +26,10 @@
       property="og:url"
       content="https://onlinestore-ch.netlify.app/assets/paginas/producto"
     />
-    <meta property="og:description" content="" />
+    <meta
+      property="og:description"
+      content="Las Adidas Samba, un clásico atemporal con estilo y comodidad. Perfectas para cualquier ocasión. ¡Descúbrelas ahora!"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://onlinestore-ch.netlify.app/" />
   </head>
